force-app/main/default/objects/Recovery_Action__c/Recovery_Action__c.object-meta.xml
<CustomObject><label>Recovery Action</label><pluralLabel>Recovery Actions</pluralLabel><nameField><label>Recovery Action Number</label><type>AutoNumber</type><displayFormat>RA-{00000}</displayFormat></nameField><deploymentStatus>Deployed</deploymentStatus><sharingModel>Private</sharingModel></CustomObject>