force-app/main/default/objects/Recovery_Action__c/fields/Action_Key__c.field-meta.xml
<CustomField><fullName>Action_Key__c</fullName><label>Action Key</label><type>Text</type><length>80</length><externalId>true</externalId><unique>true</unique></CustomField>