force-app/main/default/objects/Recovery_Action__c/fields/Description__c.field-meta.xml
<CustomField><fullName>Description__c</fullName><label>Description</label><type>LongTextArea</type><length>4000</length><visibleLines>5</visibleLines></CustomField>