force-app/main/default/objects/Recovery_Action__c/fields/Flow_Name__c.field-meta.xml
<CustomField><fullName>Flow_Name__c</fullName><label>Configured Flow Name</label><type>Text</type><length>255</length></CustomField>