force-app/main/default/objects/Recovery_Action__c/fields/Label__c.field-meta.xml
<CustomField><fullName>Label__c</fullName><label>Label</label><type>Text</type><length>255</length></CustomField>