force-app/main/default/objects/Recovery_Action__c/fields/Max_Batch_Size__c.field-meta.xml
<CustomField><fullName>Max_Batch_Size__c</fullName><label>Maximum Batch Size</label><type>Number</type><precision>18</precision><scale>0</scale><defaultValue>50</defaultValue></CustomField>